--- a/formulaire_mdp.html
+++ b/formulaire_mdp.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Homechip's Laure</title>
+    <link rel="stylesheet" href="form_mdp.css">
+    <title>Formulaire du Mode de Paiement</title>
 </head>
 <body>
     <header>
@@ -43,7 +43,17 @@
         </nav>
     </header>
     <section>
-        
+        <h1 class="ajout">Ajouter une transaction</h1>
+        <form action="" method="post">
+            <fieldset>
+                <legend>Mode de Paiement</legend>
+                <label for="">Nom Mode de Paiement :</label>
+                <input type="text" name="s_nom_modepaiement" class="nom_mode">
+            </fieldset>
+            <br>
+            <input type="submit" value="Ajouter">
+            <input type="reset" value="Annuler">
+        </form>
     </section>
     <div class="footer">
         <p>Copyright © 2024 Homechip's Laure | Tous droits réservés <br>
