--- a/formulaire_produit.html
+++ b/formulaire_produit.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Homechip's Laure</title>
+    <link rel="stylesheet" href="form_prod.css">
+    <title>Formulaire des produits</title>
 </head>
 <body>
     <header>
@@ -43,7 +43,26 @@
         </nav>
     </header>
     <section>
-        
+        <h1 class="ajout">Ajouter une transaction</h1>
+        <form action="" method="post">
+            <fieldset>
+                <legend>Produit</legend>
+                <label for="">Nom du Produit :</label>
+                <input type="text" name="s_nomproduit" class="nom">
+                <br><br>
+                <label for="">Description du Produit :</label>
+                <input type="text" name="s_descriptionproduit" class="description">
+                <br><br>
+                <label for="">Prix de vente :</label>
+                <input type="text" name="s_prixvente" class="prix">
+                <br><br>
+                <label for="">Cout unitaire :</label>
+                <input type="text" name="s_coutunit" class="cout">
+            </fieldset>
+            <br>
+            <input type="submit" value="Ajouter">
+            <input type="reset" value="Annuler">
+        </form>
     </section>
     <div class="footer">
         <p>Copyright © 2024 Homechip's Laure | Tous droits réservés <br>
