--- a/index.html
+++ b/index.html
@@ -47,15 +47,28 @@
             </div>
         </nav>
     </header>
-    <section>
-        <!-- Ajoutez votre contenu ici -->
+
+    <section class="welcome-section">
+        <div class="container">
+            <h1>Bienvenue à Homechip's Laure</h1>
+            <p>Ceci est une introduction à votre site ou votre application. Vous pouvez présenter brièvement ce que propose votre projet.</p>
+            <a href="#" class="btn btn-primary">Commencer</a>
+        </div>
     </section>
+
+    <section class="content-section">
+        <div class="container">
+            <!-- Ajoutez le contenu spécifique à la page d'accueil ici -->
+        </div>
+    </section>
+    
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
             <span class="text-muted">Copyright © 2024 Homechip's Laure | Tous droits réservés.
             Design by: <a href="https://ari-luxury.com">Ari-Luxury</a></span>
         </div>
     </footer>
+
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjO3uiV7A9TL7MwHNBW9R+Ep2T4klo7YwGI5Os/qGIlDQ2hF5V1dE7" crossorigin="anonymous"></script>
 </body>
