--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .welcome-section {
+            height: 400px; /* Ajustez la hauteur selon vos besoins */
+            background-color: #f8f9fa; /* Couleur de fond */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .welcome-section h1 {
+            font-size: 2.5rem; /* Taille de police */
+        }
+
+        .welcome-section p {
+            font-size: 1.25rem; /* Taille de police */
+            margin-bottom: 20px; /* Marge basse */
+        }
+
+        .welcome-section .btn {
+            font-size: 1.25rem; /* Taille de police */
+        }
+    </style>
     <title>Homechip's Laure</title>
 </head>
 <body>
